# libfoo

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  foo.cpp  foo.h  version.h.in
